<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/intro_astransporte"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:textColor="@color/blue"
            android:layout_marginTop="-120dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDriver"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/soy_conductor"
            android:backgroundTint="@color/blue"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClient"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/soy_cliente"
            android:backgroundTint="@color/orange"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>